Fix overflow for day 29

--- a/frontend/29/client/css/style.css
+++ b/frontend/29/client/css/style.css
@@ -1,3 +1,5 @@
+body { overflow: hidden; }
+
 canvas {
     max-width: 100%;
     max-height: 100%;
